https://bugs.webkit.org/show_bug.cgi?id=46496, rename containingBlockWidthForContent to containingBlockLogicalWidthForContent.

Reviewed by Sam Weinig.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::localCaretRect):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::containingBlockLogicalWidthForContent):
(WebCore::RenderBox::computeLogicalWidth):
(WebCore::RenderBox::computeReplacedWidthUsing):
* rendering/RenderBox.h:
* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::relativePositionOffsetX):
(WebCore::RenderBoxModelObject::containingBlockLogicalWidthForContent):
* rendering/RenderBoxModelObject.h:



Canonical link: https://commits.webkit.org/58982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68283 268f45cc-cd09-0410-ab3c-d52691b4dbfc